# Hobbit-Gang-IVS

./: .gitignore  Calculator.cpp  HELP.txt  Kostra_fnc_IVS.txt  README.md  hodnoceni.txt  skutecnost.txt
src/: CMakeLists.txt  CMakeLists.txt.user.f3a4cf9  Calculator.cpp  Calculator.h  Calculator.pro  Calculator.ui  Doxyfile  Makefile  README.h  calculator.cpp  calculator.h  calculator.pro  calculator.ui  lib.cpp  lib.h  profiling.cpp
src/Calculator/: calculator.cpp  calculator.h  calculator.pro  lib.h
src/Profiling/: stddev.cpp
src/install/: hgcalculator_1.0_amd64.deb
src/tests/: CMakeLists.txt  CalculatorTests.cpp  README.md
